Changelog
=========


1.0.2 (unreleased)
------------------

- Nothing changed yet.


1.0.1 (2014-03-21)
------------------

- Ignore virtualHostMonster configuartions in paths.
  [jone]


1.0.0 (2014-03-21)
------------------

- Initial implementation.
  [jone]