@@ -5,7 +5,8 @@ Changelog
 1.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix broken pipe error when connections are closed early by the client.
+  [jone]
 
 
 1.0.1 (2014-03-21)
